--- a/WebTemplatesTn/GeneradorVistaCatalogo.tt
+++ b/WebTemplatesTn/GeneradorVistaCatalogo.tt
@@ -137,260 +137,92 @@ var modulo = modelo.Substring(3);
         </div>
 
         <div class="modal-body">
+			@Html.HiddenFor(m => m.Id)
             @Html.HiddenFor(m => m.Estregistro, new { Value = 1 })
-            @Html.Partial("_ValidationSummaryPersonalizado")
-                
-				<#
+            @Html.Partial("_ValidationSummaryPersonalizado")                
+<#
 					
 					int acumGrid = 0;
 					foreach (var item in info)
 						{
 						 if(acumGrid == 0){
-								#>
-								<div class="row">
-								<# 
+#>
+			<div class="row">
+<# 
 						 }
-						 #>
-									<div class="col-md-<#= tamanioGridBootstrap #>">
-										<div class="form-group">
-						 <# 
-							//Write(item.NombreColumna);
-							if(item.NombreColumna!="Id" && item.NombreColumna!="EstRegistro"){  
-								if(item.TipoDato == "int" && item.NombreColumna.Substring( item.NombreColumna.Length -2, 2)=="Id" ){								
-									//Write(item.NombreColumna.Substring( item.NombreColumna.Length -2, 2));
-									if(item.NombreColumna.Substring(1) == "T" 
-									&& (	item.NombreColumna.Substring(2) != "a" && item.NombreColumna.Substring(2) != "e" &&
-											item.NombreColumna.Substring(2) != "i" && item.NombreColumna.Substring(2) != "o" && 
-											item.NombreColumna.Substring(2) != "u" )
-											)
-                                    {
-										areaDdl = "ADMIN";
-										controladorDdl = "Tlistas";
-									}else{
-										areaDdl = area;
-										controladorDdl = "Tlistas";
-                                    }
-									#>
-									@Html.LabelFor(m => m.<#= item.NombreColumna #>)
-									@(Html.Kendo().DropDownListFor(m => m.<#= item.NombreColumna #>)                              
-										  .DataTextField("Nombre")
-										  .DataValueField("Id")
-										  .OptionLabel("Seleccione...")
-										  .DataSource(source =>
-										  {
-											  source.Custom().Type("aspnetmvc-ajax")
-												  .Transport(t =>
-												  {
-													  t.Read(r => r.Action("GetListTdocumentos", "Tlistas", new { Area = "ADMIN" }).Type(HttpVerbs.Post));
-												  })
-												  .ServerFiltering(false)
-												  .Schema(s => { s.Data("Data").Total("Total").Errors("Errors"); })
-												  .Events(e => e.Error("handleOnErrorModelState"));
-										  })
-										  .Filter("contains")
-										.HtmlAttributes(new { style = "width:100%;", @class = "itemComponente" })
-									)
-									<# 
-								}else{
-                            
-								}
-							}
+#>
+				<div class="col-md-<#= tamanioGridBootstrap #>">
+					<div class="form-group"><# 
+							//Write(NombreCampo);
+							string NombreCampo = item.NombreColumna;
+							if(NombreCampo !="Id" && NombreCampo !="EstRegistro"){  
+														
+								switch (item.TipoDato)
+								{
+								case "int":
+									var entidadContieneId = NombreCampo.Substring( NombreCampo.Length -2, 2) == "Id" ? true: false;							
+									if (entidadContieneId) // Para generar dropdownlist
+										{												
+											
+											if(NombreCampo.Substring(1) == "T" 
+											&& (	NombreCampo.Substring(2) != "a" && NombreCampo.Substring(2) != "e" &&
+													NombreCampo.Substring(2) != "i" && NombreCampo.Substring(2) != "o" && 
+													NombreCampo.Substring(2) != "u" )
+													)
+											{
+												var entidadSinId = NombreCampo.Substring(1, NombreCampo.Length - 3);
+												var ultimaLetraEntidadSinId = entidadSinId.Substring(entidadSinId.Length-1, entidadSinId.Length); 
+#>
+												entidadSinId = <#= NombreCampo #>
+											ultimaLetraEntidadSinId= <#= ultimaLetraEntidadSinId #>
+<#
+												areaDdl = "ADMIN";
+												controladorDdl = "Tlistas";
+											}else{												
+												areaDdl = area;
+												controladorDdl = "Tlistas";
+											}
+										}else{  // Corresponde a un campo numerico entero
+#>
+						@Html.LabelFor(m => m.<#= NombreCampo #>)
+						@(Html.Kendo().NumericTextBoxFor(m => m.<#= NombreCampo #>)
+							.Name("<#= NombreCampo #>")
+							.Format("p0")
+							.Min(1)
+							.Max(9999)
+							.Step(1)
+							.Value(1)
+							.HtmlAttributes(new { style = "width: 100%", title = "Ingrese <#= NombreCampo #>" })
+						)
+						@Html.ValidationMessageFor(m => m.<#= NombreCampo #>)
+					</div>
+				</div>	
+<#
+										}										 
+									break;
+								default:	// varchars									
+#>
+						@Html.LabelFor(m => m.<#= NombreCampo #>)
+						@(Html.TextBoxFor(m => m.<#= NombreCampo #>, new { @class = "form-control", autocomplete = "off" }))
+						@Html.ValidationMessageFor(m => m.<#= NombreCampo #>)
+					</div>  // Fin group
+				</div>					
+<#
+									break;
+							}																		
 						}
-				
-				#>
-				
-				<div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.TdocumentoId)
-                        @(Html.Kendo().DropDownListFor(model => model.TdocumentoId)                              
-                              .DataTextField("Nombre")
-                              .DataValueField("Id")
-                              .OptionLabel("Seleccione...")
-                              .DataSource(source =>
-                              {
-                                  source.Custom().Type("aspnetmvc-ajax")
-                                      .Transport(t =>
-                                      {
-                                          t.Read(r => r.Action("GetListTdocumentos", "Tlistas", new { Area = "ADMIN" }).Type(HttpVerbs.Post));
-                                      })
-                                      .ServerFiltering(false)
-                                      .Schema(s => { s.Data("Data").Total("Total").Errors("Errors"); })
-                                      .Events(e => e.Error("handleOnErrorModelState"));
-                              })
-                              .Filter("contains")
-                            .HtmlAttributes(new { style = "width:100%;", @class = "itemComponente" })
-                        )
-                        @Html.ValidationMessageFor(m => m.TdocumentoId)
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.NumDoc)
-                        @(Html.TextBoxFor(m => m.NumDoc, new { @class = "form-control", autocomplete = "off" }))
-                        @Html.ValidationMessageFor(m => m.NumDoc)
-                    </div>
-                </div>
-            </div>
+						acumGrid = acumGrid + tamanioGridBootstrap;
+						if( acumGrid >= 12){
+							acumGrid = 0;
+#>
+			</div>  // fin row
 
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.Label("Departamento del documento")
-                        @(Html.Kendo().DropDownListFor(m=>m.TdepartamentoId)
-                      .Name("departamentos")
-                      .HtmlAttributes(new { style = "width:100%" })
-                      .OptionLabel("Seleccione departamento...")
-                      .DataTextField("Nombre")
-                      .DataValueField("DepartamentoId")
-                      .Filter("contains")
-                              .DataSource(source =>
-                              {
-                                  source.Custom().Type("aspnetmvc-ajax")
-                                      .Transport(t =>
-                                      {
-                                          t.Read(r => r.Action("GetListTdepartamentos", "Tlistas", new { Area = "ADMIN" }).Type(HttpVerbs.Post));
-                                      })
-                                      .ServerFiltering(false)
-                                      .Schema(s =>
-                                      {
-                                          s.Data("Data").Total("Total").Errors("Errors");
-                                      })
-                                      .Events(e => e.Error("handleOnErrorModelState"));
-                              })
-                            .HtmlAttributes(new { style = "width:100%;", @class = "itemComponente" })
-                        )
-                    </div>
-
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.TmunicipioId)
-                        @(Html.Kendo().DropDownListFor(m => m.TmunicipioId)
-                      .HtmlAttributes(new { style = "width:100%" })
-                      .OptionLabel("Select order...")
-                      .DataTextField("Nombre")
-                      .DataValueField("Id")
-                      .Filter("contains")
-                      .DataSource(source =>
-                      {
-                          source.Custom().Type("aspnetmvc-ajax")
-                              .Transport(t =>
-                              {
-                                  t.Read(r => r.Action("GetListTmunicipios", "Tlistas", new { Area = "ADMIN" }).Type(HttpVerbs.Post));
-                              })
-                              .ServerFiltering(true)
-                              .Schema(s => { s.Data("Data").Total("Total").Errors("Errors"); })
-                              .Events(e => e.Error("handleOnErrorModelState"));
-                      })
-                      .Enable(false)
-                      .AutoBind(false)
-                      .CascadeFrom("departamentos")
-                        )
-                        @Html.ValidationMessageFor(m => m.TmunicipioId)
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.PrimerNombre)
-                        @(Html.TextBoxFor(m => m.PrimerNombre, new { @class = "form-control", autocomplete = "off" }))
-                        @Html.ValidationMessageFor(m => m.PrimerNombre)
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.SegundoNombre)
-                        @(Html.TextBoxFor(m => m.SegundoNombre, new { @class = "form-control", autocomplete = "off" }))
-                        @Html.ValidationMessageFor(m => m.SegundoNombre)
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.PrimerApellido)
-                        @(Html.TextBoxFor(m => m.PrimerApellido, new { @class = "form-control", autocomplete = "off" }))
-                        @Html.ValidationMessageFor(m => m.PrimerApellido)
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.SegundoApellido)
-                        @(Html.TextBoxFor(m => m.SegundoApellido, new { @class = "form-control", autocomplete = "off" }))
-                        @Html.ValidationMessageFor(m => m.SegundoApellido)
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.FechaNacimiento)
-                        @(Html.Kendo().DatePickerFor(model => model.FechaNacimiento)
-                              .Max(String.Format("{0:d}", DateTime.Now))
-               //.Value(Model.FechaNacimiento)// String.Format("{0:d}", DateTime.Now))
-               //.Culture("es-CO")
-
-               //.DateInput()
-               .Format("dd/MM/yyyy")
-               .ParseFormats(new String[] { "dd/MM/yyyy" })
-                              //.Value(Model.FechaNacimiento ?? DateTime.Today)
-                              //.Events(e =>
-                              //{
-                              //    e.Change("change");
-                              //})
-                              .HtmlAttributes(new
-                              {
-                                  @class = "",
-                                  style = "width: 100%",
-                                  @maxlength = "10",
-                                  @placeholder = "DD/MM/AAAA"
-                              })
-                        )
-                        @Html.ValidationMessageFor(m => m.FechaNacimiento)
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Telefono)
-                        @(Html.TextBoxFor(m => m.Telefono, new { @class = "form-control", autocomplete = "off" }))
-                        @Html.ValidationMessageFor(m => m.Telefono)
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Telefono2)
-                        @(Html.TextBoxFor(m => m.Telefono2, new { @class = "form-control", autocomplete = "off" }))
-                        @Html.ValidationMessageFor(m => m.Telefono2)
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.CorreoElectronico)
-                        @(Html.TextBoxFor(m => m.CorreoElectronico, new { @class = "form-control", autocomplete = "off" }))
-                        @Html.ValidationMessageFor(m => m.CorreoElectronico)
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Direccion)
-                        @(Html.TextBoxFor(m => m.Direccion, new { @class = "form-control", autocomplete = "off" }))
-                        @Html.ValidationMessageFor(m => m.Direccion)
-                    </div>
-                </div>
-            </div>
-        </div>
-
+<# 
+							
+                        }
+					}
+#>
+							
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
             <button type="submit" class="btn btn-primary">Guardar</button>
